crates/xlate/tests/snapshots/golden_matrix__instr_name_field__gpt-4o-mini__20260910__chat_to_responses__gpt6.snap
---
source: crates/xlate/tests/golden_matrix.rs
expression: rendered
---
--- body ---
{
  "model": "gpt-6-astra",
  "input": [
    {
      "type": "message",
      "role": "user",
      "content": [
        {
          "type": "input_text",
          "text": "Say hi to bob."
        }
      ]
    }
  ],
  "max_output_tokens": 64
}
--- headers ---
content-type: application/json
upstream_streams: false
--- degraded ---
ext.chat.msg_ext=dropped
